--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	font-family: "Segoe UI", "Helvetica Neue", Arial, sans-serif;
 	font-weight: 400;
@@ -52,7 +56,10 @@ header {
 	margin-left: auto;
   margin-right: auto;
   margin-top: 182px;
-  /*scroll-behavior: smooth;*/
+}
+
+.button:active {
+	background-color: #ffffff;
 }
 
 .button-arrow {
